--- a/Client/src/components/Modal.css
+++ b/Client/src/components/Modal.css
@@ -1,8 +1,13 @@
 .modal-container {
+  position: absolute;
+  left: 50%;
+  top: 35%;
+  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   padding: 2em;
   border: 1px solid black;
+  z-index: 100;
 }
 
 .modal-header {
@@ -20,12 +25,12 @@
 }
 
 .modal-form input {
-    padding: 0.5em;
+  padding: 0.5em;
 }
 
 .modal-form input[type="submit"] {
   margin-top: 1em;
-    color: #fff;
+  color: #fff;
   font-size: 1em;
   padding: 0.5em 1em;
   border: none;
