--- a/Client/src/components/Modal.css
+++ b/Client/src/components/Modal.css
@@ -1,13 +1,17 @@
 .modal-container {
   position: absolute;
   left: 50%;
-  top: 35%;
+  top: 250px;
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   padding: 2em;
-  border: 1px solid black;
-  z-index: 100;
+  width: 350px;
+  box-shadow: 0px 0px 8px 8px rgb(0, 0, 0, 0.1);
+}
+
+.modal-container * {
+  margin: 0.3em 0;
 }
 
 .modal-header {
@@ -20,11 +24,9 @@
   flex-direction: column;
 }
 
-.modal-form label {
-  margin-top: 1em;
-}
-
 .modal-form input {
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   padding: 0.5em;
 }
 
