--- a/Client/src/components/Modal.css
+++ b/Client/src/components/Modal.css
@@ -1,7 +1,7 @@
 .modal-container {
   position: absolute;
   left: 50%;
-  top: 250px;
+  top: 275px;
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
@@ -15,8 +15,8 @@
 }
 
 .modal-header {
-  display: flex;
-  justify-content: space-between;
+  text-align: center;
+  margin-bottom: 2em;
 }
 
 .modal-form {
