--- a/Client/src/components/Guestbook/Guestbook.css
+++ b/Client/src/components/Guestbook/Guestbook.css
@@ -2,24 +2,38 @@
   width: 478px;
 }
 
+.guestbook-container h3 {
+  text-align: center;
+  margin-bottom: 1em;
+}
+
 .guest-form {
   display: flex;
   flex-direction: column;
 }
 
 .guest-form input {
+  box-shadow: 0px 0px 8px #ccc;
+  border: none;
   margin: 20px 0;
-  border-radius: 10px;
 }
 
 .guest-form input[type="text"] {
   padding: 1em;
 }
+.guest-form input[type="text"]:focus {
+  outline:none;
+}
 
 .guest-form textarea {
   padding: 1em;
   height: 300px;
-  border-radius: 10px;
+  border: none;
+  box-shadow: 0px 0px 8px #ccc;
+}
+
+.guest-form textarea:focus {
+  outline: none;
 }
 
 .guest-form input[type="submit"] {
@@ -30,6 +44,7 @@
   padding: 0.5em 1em;
   border: none;
   background-color: rgb(57, 120, 255);
+  border-radius: 3px;
 }
 
 .message-header {
@@ -42,8 +57,7 @@
 .message-container {
   margin-top: 2em;
   padding: 1em;
-  border: 1px solid black;
-  border-radius: 10px;
+  border-bottom: 1px solid rgb(0, 0, 0, 0.2);
 }
 
 .message-content {
